test/visibility/import/public/no-imm-import.good
no-imm-import.chpl:2: error: 'import' statement paths must start with at least one module symbol (e.g., 'import <module>[.<submodule>]*;')
