test/visibility/import/public/no-imm-import.chpl
module Foo {
  public import 3;
}
